validate-kyverno/kyverno/manifests/validatingwebhooks.yaml
apiVersion: v1
items:
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    creationTimestamp: "2023-05-31T09:08:14Z"
    generation: 1
    labels:
      webhook.kyverno.io/managed-by: kyverno
    name: kyverno-policy-validating-webhook-cfg
    ownerReferences:
    - apiVersion: rbac.authorization.k8s.io/v1
      kind: ClusterRole
      name: kyverno:webhook
      uid: 812a45ab-a604-428f-ba92-53e45d07231a
    resourceVersion: "450340476"
    uid: 3edf36f1-a302-474b-9c69-d9524e9721ea
  webhooks:
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM3VENDQWRXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFZTVJZd0ZBWURWUVFEREEwcUxtdDUKZG1WeWJtOHVjM1pqTUI0WERUSXpNRFV6TVRBNE1EZ3hORm9YRFRJME1EVXpNREE1TURneE5Gb3dHREVXTUJRRwpBMVVFQXd3TktpNXJlWFpsY201dkxuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DCmdnRUJBTXQwVFZ6azhzWFE1NXhON0tsYkx4b0x0Z0tldXVZMmVVNWVqaTRSL1RTak1JdUtwS01jQ0plZU1VOW4KS0ZncndJdTRXbHk5K1ViYjhRUGgrZUlwYVBEV01xODM1MFNZMzQxTjBwdmphS1VFVjVxZDJyMm5YSzJkTHZCTwoyRnBnOHBxY1Qv [...]
      service:
        name: kyverno-svc
        namespace: kyverno
        path: /policyvalidate
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validate-policy.kyverno.svc
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - kyverno.io
      apiVersions:
      - v1
      - v2beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - clusterpolicies/*
      - policies/*
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    creationTimestamp: "2023-05-31T09:08:45Z"
    generation: 1
    labels:
      webhook.kyverno.io/managed-by: kyverno
    name: kyverno-resource-validating-webhook-cfg
    ownerReferences:
    - apiVersion: rbac.authorization.k8s.io/v1
      kind: ClusterRole
      name: kyverno:webhook
      uid: 812a45ab-a604-428f-ba92-53e45d07231a
    resourceVersion: "450340970"
    uid: 2fc4c932-36ed-4c41-bd49-0ce856226e81
  webhooks:
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM3VENDQWRXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFZTVJZd0ZBWURWUVFEREEwcUxtdDUKZG1WeWJtOHVjM1pqTUI0WERUSXpNRFV6TVRBNE1EZ3hORm9YRFRJME1EVXpNREE1TURneE5Gb3dHREVXTUJRRwpBMVVFQXd3TktpNXJlWFpsY201dkxuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DCmdnRUJBTXQwVFZ6azhzWFE1NXhON0tsYkx4b0x0Z0tldXVZMmVVNWVqaTRSL1RTak1JdUtwS01jQ0plZU1VOW4KS0ZncndJdTRXbHk5K1ViYjhRUGgrZUlwYVBEV01xODM1MFNZMzQxTjBwdmphS1VFVjVxZDJyMm5YSzJkTHZCTwoyRnBnOHBxY1Qv [...]
      service:
        name: kyverno-svc
        namespace: kyverno
        path: /validate/fail
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validate.kyverno.svc-fail
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - kyverno
    objectSelector: {}
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      - DELETE
      - CONNECT
      resources:
      - replicationcontrollers
      scope: '*'
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      - DELETE
      - CONNECT
      resources:
      - pods
      - pods/ephemeralcontainers
      scope: '*'
    - apiGroups:
      - apps
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      - DELETE
      - CONNECT
      resources:
      - daemonsets
      scope: '*'
    - apiGroups:
      - apps
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      - DELETE
      - CONNECT
      resources:
      - deployments
      scope: '*'
    - apiGroups:
      - apps
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      - DELETE
      - CONNECT
      resources:
      - replicasets
      scope: '*'
    - apiGroups:
      - apps
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      - DELETE
      - CONNECT
      resources:
      - statefulsets
      scope: '*'
    - apiGroups:
      - batch
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      - DELETE
      - CONNECT
      resources:
      - cronjobs
      scope: '*'
    - apiGroups:
      - batch
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      - DELETE
      - CONNECT
      resources:
      - jobs
      scope: '*'
    sideEffects: NoneOnDryRun
    timeoutSeconds: 10
kind: List
metadata:
  resourceVersion: ""
